--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@
   #  -g     - this flag adds debugging information to the executable file
   #  -Wall  - this flag is used to turn on most compiler warnings
   CFLAGS  = -g -Wall
-  LFLAGS =  -lcurl
+  LFLAGS =  -lcurl -ljsoncpp
  
   # The build target 
   TARGET = main
