refactor main, add test mode and test data json file

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,7 @@ CC = g++
 #  -O2		- turns on optimization flags
 #  -l...  - library dependencies
 #  -I...	- include folders 
-CFLAGS  = -g -Wall -O2 -lcurl -ljsoncpp -I../include
+CFLAGS  = -g -Wall -O2 -lcurl -ljsoncpp -lsqlite3 -I../include
 
 # Target and dependencies
 TARGET = main
